Tue Sep 10 14:17:45 1996  Tom Yu  <tlyu@mit.edu>

	* kpasswd.M: remove ".so man1/header.doc"

Sat Sep  7 02:13:32 1996  Sam Hartman  <hartmans@planet-zorp.MIT.EDU>

	* Makefile.in (install): Fix BINDIR to be CLIENT_BINDIR

Fri Aug 23 14:17:42 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (install): Install in bin not sbin.

Thu Aug 15 19:30:18 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add USE_KDB5_LIBRARY to pick up -ldb.  Recent
 		changes to db-ndbm.h and k5-int.h cause ndbm.h to no
 		longer be included, which means that the dbm_error and
 		dbm_clearerr are no longer necessarily macros (as they
 		often are in ndbm.h), so must be pulled in from libdb.

Mon Aug 12 12:01:28 1996  Barry Jaspan  <bjaspan@mit.edu>

	* configure.in, Makefile.in: don't build kpasswd.local (not really
 	needed)

Tue Aug  6 11:35:45 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* kpasswd.c (kpasswd): call ovsec_kadm_init with
		KADM5_CHANGEPW_SERVICE so that ovsec principals don't need
		to exist in the db.

Mon Jul 22 04:07:02 1996  Marc Horowitz  <marc@mit.edu>

	* tty_kpasswd.c: main returns int, not void

Thu Jul 18 19:46:24 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: removed ET_RULES, replaced with AC_PROG_AWK

Wed Jul 10 01:28:12 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in, configure.in: added autoconf support

Tue Jul  9 15:03:13 1996  Marc Horowitz  <marc@mit.edu>

	* kpasswd.c, tty_kpasswd.c, xm_kpasswd.c: renamed
 	<ovsec_admin/foo.h> to <kadm5/foo.h>

	* configure.in (CONFIG_DIRS): build the subdirs for the new admin
 	system, not the old one.
