@@ -1,5 +1,6 @@
 AC_INIT(kpasswd.c)
 CONFIG_RULES
+AC_CONFIG_SUBDIRS(unit-test)
 AC_PROG_INSTALL
 AC_PROG_AWK
 USE_KADMCLNT_LIBRARY
