@@ -1,0 +1,3 @@
+AC_INIT(helpers.exp)
+CONFIG_RULES
+V5_AC_OUTPUT_MAKEFILE
