@@ -1,3 +1,9 @@
+Fri Sep 20 17:32:19 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* configure.in: add unit-test subdirectory
+
+	* unit-test/: create configure.in and Makefile.in
+	
 Tue Sep 10 14:17:45 1996  Tom Yu  <tlyu@mit.edu>
 
 	* kpasswd.M: remove ".so man1/header.doc"
